# unr-ros-pkg

./: LICENSE  README  README.md  index.html  params.json
baxter_demos/: CMakeLists.txt  package.xml
baxter_demos/scripts/: baxter_image.py  baxter_selfie.py  baxter_wave.py
baxter_util/: CMakeLists.txt  package.xml
baxter_util/launch/: baxter_kinect.launch
hnt/: CMakeLists.txt  package.xml  stack.xml
hnt/feature_extractor/: CMakeLists.txt  package.xml
hnt/feature_extractor/msg/: CPRWFeatureVector.msg
hnt/feature_extractor/src/: feature_extractor.cc
hnt/gmm_classify/: CMakeLists.txt  manifest.xml  package.xml
hnt/gmm_classify/src/: gmm_classify.cc
hnt/hnt_launch/: '  CMakeLists.txt  manifest.xml  p2os_nav.launch  package.xml  simple_2d.launch  static_transforms.xml
hnt/hnt_launch/2d_sim/: .stage.xml.swp  2d.vcg  b3ia.world  room.yaml  rth.yaml  simple_room.yaml  stage.xml
hnt/hnt_launch/nav/: base_local_planner_params.yaml  costmap_common_params.yaml  flbr_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.yaml  oit_local_planner_params.yaml  people_planner_params.yaml  rth.pgm
hnt/model_base_local_planner/: CMakeLists.txt  model_plugin.xml  package.xml
hnt/model_base_local_planner/src/: model_planner.cc  model_planner_ros.cc
hnt/point_map/: CMakeLists.txt  package.xml  simple.yaml
hnt/point_map/src/: point_map.cc
hnt/point_map/srv/: PointMap.srv
hnt/stage_adapt/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hnt/stage_adapt/src/: stage-adapt.cc
hri_experiments/age_study/: README
hri_experiments/age_study/age_study/: CMakeLists.txt  package.xml
inmoov/: package.xml
inmoov/inmoov_pub/: CMakeLists.txt  package.xml  right_hand_state_publisher  state_publisher.cpp  state_publisher.cpp~  urdf.rviz
inmoov/inmoov_pub/launch/: display.launch  display.launch~
inmoov/inmoov_urdf/: CMakeLists.txt  package.xml
inmoov/inmoov_urdf/urdf/: rightHand.urdf  rightHand.urdf~
inmoov/old/: CMakeLists.txt  package.xml
reu_netbot/frontier_exploration/launch/: global_map.launch  no_global_map.launch
reu_netbot/frontier_exploration/src/: explore_client.cpp  explore_server.cpp
reu_netbot/hector_worldmodel/hector_object_tracker/: CHANGELOG.rst  CMakeLists.txt  package.xml
reu_netbot/hector_worldmodel/hector_worldmodel/: CHANGELOG.rst  package.xml
reu_netbot/hector_worldmodel/hector_worldmodel_geotiff_plugins/: CHANGELOG.rst  package.xml
reu_netbot/hector_worldmodel/hector_worldmodel_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
reu_netbot/navigation_2d/nav2d_karto/: CMakeLists.txt  package.xml
reu_netbot/navigation_tutorials/navigation_stage/: hector.rviz  single_robot.rviz
reu_netbot/reu_netbot/: CMakeLists.txt  package.xml
reu_netbot/sonar_wander/: CMakeLists.txt  package.xml
reu_netbot/sonar_wander/src/: sonar_wander.cc
reu_netbot/stage_joy/: CMakeLists.txt  CMakeLists.txt~  package.xml
reu_netbot/stage_joy/src/: stage_joy_node.cpp  (+1 more)
reu_netbot/stage_maps/: map.pgm  map.yaml
reu_netbot/stage_sim/: package.xml
stage_sim/: CMakeLists.txt
stage_sim/launch/: sem_stage.launch
unr_uav/ardrone_line_following/: CMakeLists.txt  package.xml
unr_uav/iris_logs/: CMakeLists.txt  package.xml
(+84 files in other folders)
