<?xml version="1.0"?>
<package>
  <name>stage_adapt</name>
  <version>0.0.0</version>
  <description brief="stage_adapt">

     stage_adapt

  </description>
  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/stage_adapt</url>

</package>


